Fix horizontal scrollbar

--- a/src/JhipsterSampleApplication/ClientApp/src/app/entities/supreme/list/supreme.component.scss
+++ b/src/JhipsterSampleApplication/ClientApp/src/app/entities/supreme/list/supreme.component.scss
@@ -2,7 +2,7 @@
   /* Avoid forcing table/wrapper widths to prevent horizontal scrolling */
   ::ng-deep .p-datatable table {
     table-layout: fixed !important;
-    width: 100% !important;
+    width: 98% !important;
   }
   ::ng-deep .p-datatable .p-datatable-tbody > tr {
     min-height: 22px !important;
